# vtk-egui-demo

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
include/: vtk_widget.h
src/: lib.rs  main.rs  vtk_widget.cpp  vtk_widget.rs
